--- a/assets/css/student-dashboard.css
+++ b/assets/css/student-dashboard.css
@@ -12,22 +12,25 @@
 }
 
 .item-1 {
-    flex-basis: 70%;
+    flex-basis: calc(70% - 1.25rem);
+    flex-grow: 1;
 }
 
 .item-2 {
-    flex-basis: 30%;
+    flex-basis: calc(30% - 1.25rem);
+    flex-grow: 1;
 }
 
 /***** SECTION 1 *****/
 .welcome-section {
     display: flex;
     justify-content: space-between;
-    flex-basis: 70%;
     width: 100%;
+    flex-wrap: wrap;
+    gap: 1rem;
 
     &:not(.title) {
-        align-items: end;
+        align-items: center;
     }
 
     & .title {
@@ -37,6 +40,11 @@
         & span {
             font-weight: 600;
         }
+    }
+
+    & .date {
+        white-space: nowrap;
+        flex-shrink: 0;
     }
 }
 
@@ -220,14 +228,14 @@
     height: 3rem; /* Fixed header height */
 }
 
-header .current-date {
+.wrapper header .current-date {
     font-size: 1.05rem;
     font-weight: 600;
     color: #ba55d3;
     margin: 0;
 }
 
-header span {
+.wrapper header span {
     height: 32px;
     width: 32px;
     cursor: pointer;
@@ -245,15 +253,15 @@ header span {
     transition: background 0.2s ease;
 }
 
-header #prev {
+.wrapper header #prev {
     left: 5px;
 }
 
-header #next {
+.wrapper header #next {
     right: 5px;
 }
 
-header span:hover {
+.wrapper header span:hover {
     background: #f2f2f2;
 }
 
